improve trap handling and some refactors
- Move architecture specific functions into the `nekos-arch` crate.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,5 +10,5 @@ runner = """ qemu-system-riscv64
 [build]
 target = "riscv64gc-unknown-none-elf"
 rustflags = [
-  "-C", "link-arg=-T./nekos-kernel/linker.ld"
+  "-C", "link-arg=-T./nekos-kernel/riscv64.ld"
 ]
