--- a/nekos-kernel/Cargo.toml
+++ b/nekos-kernel/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bitflags = "2.10.0"
+limine = "0.5.0"
 nekos-arch = { path = "../nekos-arch"}
 
 [profile.dev]
