--- a/nekos-kernel/Cargo.toml
+++ b/nekos-kernel/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "nekos-kernel"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 colorz = "1.1.4"
 limine = "0.5.0"
 nekos-arch = { path = "../nekos-arch"}
+spin = "0.10.0"
 
 [profile.dev]
 panic = "abort"
