--- a/nekos-kernel/Cargo.toml
+++ b/nekos-kernel/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bitflags = "2.10.0"
 colorz = "1.1.4"
 limine = "0.5.0"
 nekos-arch = { path = "../nekos-arch"}
